using System;
using src.Domain.Shared;

namespace Domain.PatientAggregate
{   
    /// <summary>
    /// Represents the Gender of a patient
    /// </summary>
    public enum Gender {

        Male,
        Female
    }

}